--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
+    "react-circular-progressbar": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-search-field": "^1.0.0",
+    "react-ui-cards": "^1.5.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1"
   },
