add/delete game

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-circular-progressbar": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
+    "react-modal": "^3.8.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-search-field": "^1.0.0",
