--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-circular-progressbar": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
+    "react-medium-image-zoom": "^3.0.16",
     "react-modal": "^3.8.1",
+    "react-modal-image": "^2.3.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-search-field": "^1.0.0",
